<resources>
    <string name="app_name">SHOnlineShop</string>

    // Get Start
    <string name="get_1">S.H</string>
    <string name="get_2">Online Shop</string>
    <string name="get_3">Get start</string>
    // Home

    <string name="home_1">Home</string>
    <string name="home_2">Category</string>
    <string name="home_3">Favorites</string>
    <string name="home_4">Best selling</string>

    // categories

    <string name="cate_1">All</string>
    <string name="cate_2">Home Decoration</string>
    <string name="cate_3">Curtain</string>
    <string name="cate_4">Sticky Paper wall</string>
    <string name="cate_5">Spices</string>
    <string name="cate_6">Ascending price</string>
    <string name="cate_7">Filters</string>

    // Detail product

    <string name="pro_1">Price</string>
    <string name="pro_2">Quantity</string>
    <string name="pro_3">Delivery</string>
    <string name="pro_4">Size</string>
    <string name="pro_5">Description</string>
    <string name="des_1"></string>
    <string name="des_2"></string>

    // Search

    <string name="search_1">Search</string>
    <string name="search_2">Search....</string>
    <string name="search_3">Last viewed</string>
    <string name="search_4">Latest search</string>
    <string name="search_5">Clean all history</string>
    // Checkout

    <string name="check_1">Checkout</string>
    <string name="check_2">Delivery</string>
    <string name="check_3">Location</string>
    <string name="check_4">Payment Method</string>
    <string name="check_5">Total</string>
    <string name="check_6">Enter a discount code</string>
    <string name="check_7">Delivery will there on 3 day</string>
    <string name="check_8">Add payment</string>
    <string name="check_9">Payment</string>
    <string name="check_10">Select for Delivery</string>
    <string name="check_11">Pay Now</string>

    // Payment method

    <string name="pay_1">Card Number</string>
    <string name="pay_2">Valid Date</string>
    <string name="pay_3">CVV</string>
    <string name="pay_4">Card Name</string>

    // login
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="already_have_account">Already Have Account? Login</string>
    <string name="or_login_with">or login with</string>

    // product name
    <string name="white_curtain">white Curtain</string>


    <string name="acc_1">Account</string>
    <string name="acc_2">Username</string>
    <string name="acc_3">Username@gmail.com</string>
    <string name="acc_4">Order information</string>
    <string name="acc_5">Account information</string>
    <string name="acc_6">Favorite List</string>
    <string name="acc_7">Contact us</string>
    <string name="acc_8">About us</string>
    <string name="acc_9">Email</string>
    <string name="acc_10">Phone</string>
    <string name="acc_11">Password</string>
    <string name="acc_12">Change</string>
    <string name="acc_13">+855 00 000 000</string>
    <string name="acc_14">********</string>

    <string name="order_1">Order Information</string>

    <string name="about_1">About us</string>
    <string name="about_2">The SH Online Shop app is an e-commerce application developed for the purpose of providing customers with an online platform to browse and purchase products. </string>
    <string name="about_3">What Us?</string>
    <string name="about_4">Where Our location?</string>

    <string-array name="delivery">
        <item>Select Delivery</item>
        <item>J&amp;T Express Cambodia</item>
        <item>VAT Express Cambodia</item>
        <item>CJ Express Cambodia</item>
        <item>DHL Cambodia</item>
        <item>FedEx Cambodia</item>
        <item>UPS Cambodia</item>
        <item>EMS Cambodia</item>
        <item>Cambodia Post</item>
        <item>GDEX Cambodia</item>
        <item>TNT Express Cambodia</item>
        <item>Kerry Express Cambodia</item>
    </string-array>

</resources>