<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AccountInformationActivity">

    <ImageView
        android:id="@+id/back_button_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/left_arrow_icon"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp" />
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_5"
            android:textSize="25sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_2"
            android:textSize="22sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView_change_username"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_12"
            android:gravity="end" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/editText_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:hint="@string/acc_2"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_9"
            android:textSize="22sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView_change_email"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_12"
            android:gravity="end" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:hint="@string/acc_3"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_10"
            android:textSize="22sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/textView_change_phone"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_12"
            android:gravity="end" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:hint="@string/acc_13"
            android:inputType="phone"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_11"
            android:textSize="22sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:text="@string/acc_12" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:hint="@string/acc_14"
            android:inputType="textPassword"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:backgroundTint="@color/blue"
            android:id="@+id/change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_12"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>